<package>
  <name>shm_server</name>
  <version>1.0.0</version>
  <description>
    This package contains shm_server implementation
  </description>
  <author email="ram.techen@gmail.com">Adam Kowalewski</author>
  <maintainer email="ram.techen@gmail.com">Adam Kowalewski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>shm_comm</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>shm_comm</run_depend>
  <run_depend>roscpp</run_depend>
</package>
